--- a/map.html
+++ b/map.html
@@ -13,7 +13,7 @@
         <![endif]-->
     <link rel="stylesheet" href="css/styles.css">
     <link href="css/routeplanner.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyA8QudlfW8WdrV64X_FkVvy0bzFG6D0Gzc"&callback=initMap></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=<YOUR KEY HERE>"&callback=initMap></script>
     <script src="js/jquery-1.8.0.min.js" type="text/javascript"></script>
     <script src="js/routeplanner.min.js" type="text/javascript"></script>
     <script src="core/script.js" type="text/javascript"></script>
